--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,6 +1,3 @@
-# This workflow will build a Java project with Maven
-# For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-maven
-
 name: Java CI with Maven
 
 on:
@@ -19,7 +16,16 @@ jobs:
     - name: Set up JDK 15
       uses: actions/setup-java@v2
       with:
-        java-version: '16'
+        java-version: '15'
         distribution: 'adopt'
-    - name: Build with Maven
+    # (-B BatchMode)
+    - name: Build with Maven 
       run: mvn -B package --file pom.xml
+    - name: Upload a Build Artifact
+      uses: actions/upload-artifact@v2.2.3
+      with:
+        # Artifact name
+        name: Rot13RESTService # optional, default is artifact
+        # A file, directory or wildcard pattern that describes what to upload
+        path: target/*.jar
+        # The desired behavior if no files are found using the provided path.
